<resources>
    <string name="app_name">LG Customer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="msg">Message</string>


    <string name="Login">Log In</string>
    <string name="Select_Language">Select Language</string>
    <string name="pin_enable">Pin Enable</string>
    <string name="English">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="select">Select</string>
    <string name="four_digit_pin">Enter 4-digit PIN</string>
    <string name="unlockapp">Unlock your app</string>
    <string name="already_account">Already have an account?</string>
    <string name="Login2">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgotpass2">To reset you password, please enter your email address</string>
    <string name="Submit">Submit</string>
    <string name="contractors">Contractors</string>
    <string name="myfav">Favorites</string>
    <string name="didnt_receive_pin">"Didn't receive PIN? "</string>
    <string name="skip">Skip</string>
    <string name="signup_heading">Sign Up for an Account</string>
    <string name="country">Country (Optional)</string>
    <string name="age_optional">Age (Optional)</string>
    <string name="phone_optional">Phone (Optional)</string>
    <string name="terms_condition">Accept Terms &amp; Conditions</string>
    <string name="signup">Sign Up</string>
    <string name="filter">Filter</string>
    <string name="age">Age</string>
    <string name="age_years">90 yrs</string>
    <string name="height">Height</string>
    <string name="height_filter">5.72 ft</string>
    <string name="weight">Weight</string>
    <string name="weight_range">250 lbs</string>
    <string name="body_type">Body Type</string>
    <string name="race">Race</string>
    <string name="reset">To reset your password, please enter your email address </string>
    <string name="search">Search</string>
    <string name="buy_credit">Buy Credit</string>
    <string name="premium_heading">Become a \nPremium Member</string>
    <string name="heading2">Take advantage of premium features!</string>
    <string name="contactus">Contact Us</string>
    <string name="details">Details</string>
    <string name="tip_artist">Tip the Artist</string>
    <string name="live_chat">Live Chat</string>
    <string name="images">Images</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="food">Food</string>
    <string name="msgs">Messages</string>
    <string name="buycredits">Buy Credits</string>
    <string name="mycredits">My Credits</string>
    <string name="current_credits">Current Credits</string>
    <string name="buy">Buy</string>
    <string name="credithistory">Credit History</string>
    <string name="mypayment">My Payments</string>
    <string name="notification">Notifications</string>
    <string name="setting">Setting</string>
    <string name="pinlock">Pin Lock</string>
    <string name="menu">Menu</string>
    <string name="stealthmode">Stealth Mode</string>
    <string name="disguise_app">Disguise Your App</string>
    <string name="change_app_icon_notification">Change App icon and Notifications</string>
    <string name="change_app_icon">Change App Icon</string>
    <string name="change_notification">Change Notifications</string>
    <string name="msg_notification">Message Notifications</string>
    <string name="select_alternate_language">Select an alternate message</string>
    <string name="myprofile">Edit Profile</string>
    <string name="show_menu">Menus</string>
    <string name="bevrage">Bevrages</string>
    <string name="cigars">Cigars</string>
    <string name="logout">Log Out</string>
    <string name="select_body_type">Select Body Type</string>
    <string name="msg_hint">Message...</string>
    <string name="New">New</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="confirm">Confirmed</string>
    <string name="payment_mode">Payment Mode:</string>
    <string name="user_description">User Description</string>
    <string name="contractor_description">Contractor Description</string>
    <string name="tip_heading">Enter Received Tip Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="available">Available</string>
    <string name="available_soon">Available Soon</string>
    <string name="not_available">Not Available</string>
    <string name="already_accountt">"Already have an account? "</string>
    <string name="home">Home</string>
    <string name="msglist">Message List</string>
    <string name="hair">Hair</string>
    <string name="dining">Dining</string>
    <string name="cigratee">Cigratee and cigar</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="something_wrong_msg">Something Wrong  !!</string>
    <string name="fill_email">Please Enter Email</string>
    <string name="fill_all_fields">Please Fill All Fields !!</string>
    <string name="success_transaction">Your Transaction Is Successfull</string>
    <string name="transaction_cancel">Transaction Cancel</string>
    <string name="transaction_invalid">Transaction Invalid</string>
    <string name="no_empty_msg">Message cannot be empty</string>
    <string name="greater_amount">Amount should be greater than 0</string>
    <string name="session">Session Expired</string>
    <string name="all_stealth">All Stealth</string>
    <string name="alternate_message">Alternate Message</string>
    <string name="set_stealth">Do You Want To Select This Steath Mode ?</string>
    <string name="yes">YES</string>
    <string name="change_icontext">You have changed the \n app icon for \"LG\"</string>
    <string name="Ok">OK</string>
    <string name="chat_info_title">A Customer will be charged 10 credits to initiate a chat. Chat will be avaialble
    for 30 days only. For more chat, Customer will be charged 10 credits more. </string>
    <string name="purchase">Purchase</string>
    <string name="spoken">Spoken Languages</string>
    <string name="chat_unavailable">Chat Unavailable</string>
    <string name="charge">Charge</string>
    <string name="high_Five">Give a High Five</string>
    <string name="select_member">Please Select Member</string>
    <string name="staff_type">SELECT STAFF TYPE</string>
    <string name="staff_member">SELECT STAFF MEMBER</string>
    <string name="amount">AMOUNT</string>
    <string name="make_payment">Make Payment</string>
    <string name="forgotpin">Forgot Pin?</string>
    <string name="bookatable">Book A Table</string>
    <string name="profile_pics">Profile Pics</string>
    <string name="update">Update</string>
    <string name="approval_pending">Approval Pending</string>
    <string name="approval_rejected">Approval Rejected</string>
    <string name="select_option">Select Options</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="default_profile">Set As Default Profile</string>
    <string name="hide_profile">Hide Profile</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="files_update">File Update!</string>
    <string name="message">First update image !!</string>


</resources>