<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="10sp"
       android:layout_margin="10dp"
        android:background="@drawable/tip_alertdialog"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:text="@string/Select_Language"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioenglish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/English"
            android:fontFamily="@font/josefinsans_regular"
            android:checked="false"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radiospanish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:fontFamily="@font/josefinsans_regular"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:textSize="20dp" />
    </RadioGroup>

    <Button
        android:layout_width="200sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:layout_height="50sp"
        android:text="@string/select"
        android:textAllCaps="false"
        android:gravity="center"
        android:id="@+id/select"
        android:textSize="16sp"
        android:background="@drawable/btn_shape"
        android:fontFamily="@font/josefinsans_semibold"
        android:textColor="@color/white"/>
    </LinearLayout>