<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="10sp"
        android:background="@drawable/tip_alertdialog"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8sp"
            android:text="@string/select_option"
            android:fontFamily="@font/josefinsans_regular"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_alignParentEnd="true"
            android:id="@+id/close_alert"
            android:layout_margin="8sp"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:src="@drawable/close"/>
    </RelativeLayout>

    <TextView

        android:id="@+id/txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/view"
        android:fontFamily="@font/josefinsans_regular"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView

        android:id="@+id/txt_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/delete"
        android:fontFamily="@font/josefinsans_regular"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView

        android:id="@+id/txt_setasprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/default_profile"
        android:fontFamily="@font/josefinsans_regular"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"/>

    </LinearLayout>