<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10sp"
    android:layout_margin="10dp"
    android:background="@drawable/tip_alertdialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/filter"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="30dp"
            android:src="@mipmap/cancel"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:layout_height="30dp"/>



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/age"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_filter_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/age_years"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/rangeSeekbar_Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:corner_radius="10"
        app:min_value="1"
        app:max_value="100"
        app:bar_color="@color/blue"
        app:bar_highlight_color="@color/red"
        app:left_thumb_color="@color/blue"
        app:right_thumb_color="@color/blue"
        app:left_thumb_color_pressed="@color/blue"
        app:right_thumb_color_pressed="@color/blue"
        app:data_type="_integer"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/height"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_filter_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/height_filter"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/rangeSeekbar_Height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:corner_radius="10"
        app:min_value="1"
        app:max_value="10"
        app:bar_color="@color/blue"
        app:bar_highlight_color="@color/red"
        app:left_thumb_color="@color/blue"
        app:right_thumb_color="@color/blue"
        app:left_thumb_color_pressed="@color/blue"
        app:right_thumb_color_pressed="@color/blue"
        app:data_type="_integer"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/weight"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_filter_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/weight_range"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/rangeSeekbar_Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:corner_radius="10"
        app:min_value="100"
        app:max_value="300"
        app:bar_color="@color/blue"
        app:bar_highlight_color="@color/red"
        app:left_thumb_color="@color/blue"
        app:right_thumb_color="@color/blue"
        app:left_thumb_color_pressed="@color/blue"
        app:right_thumb_color_pressed="@color/blue"
        app:data_type="_integer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:text="@string/body_type"
        android:textColor="@android:color/black"
        android:textSize="14dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_body_type"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="#ffe19f"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_body_type"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:hint="@string/body_type"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="20dp"
            android:src="@drawable/filter"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_height="20dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:text="@string/race"
        android:textColor="@android:color/black"
        android:textSize="14dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_race"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="#ffe19f"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_race"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:hint="@string/race"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="20dp"
            android:src="@drawable/filter"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_height="20dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:text="@string/hair"
        android:textColor="@android:color/black"
        android:textSize="14dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_Hair"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="#ffe19f"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_hair"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:hint="@string/hair"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="20dp"
            android:src="@drawable/filter"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_height="20dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:textAllCaps="false"
            android:gravity="center"
            android:id="@+id/btn_Submit"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:background="@color/red"
            android:fontFamily="@font/josefinsans_semibold"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_filter_reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@color/black"
            android:fontFamily="@font/josefinsans_semibold"
            android:textColor="@color/white"/>


    </LinearLayout>


</LinearLayout>