<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="10sp"
       android:layout_margin="10dp"
        android:background="@drawable/tip_alertdialog"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:text="@string/tip_heading"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount"
            android:id="@+id/amount"
            android:textColorHint="#FF000000"
            android:fontFamily="@font/josefinsans_regular"
            android:background="@android:color/transparent"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:textColor="@color/black"
            android:inputType="number"
            android:padding="10sp"
            android:singleLine="true"
            tools:targetApi="lollipop" />

    <Button
        android:layout_width="200sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:layout_height="50sp"
        android:text="@string/Submit"
        android:textAllCaps="false"
        android:gravity="center"
        android:id="@+id/submit"
        android:textSize="16sp"
        android:background="@drawable/btn_shape"
        android:fontFamily="@font/josefinsans_semibold"
        android:textColor="@color/white"/>
    </LinearLayout>