<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20sp"
    android:layout_margin="20dp"
    android:background="@drawable/tip_alertdialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/mr_dialog_close_light"/>

    <TextView
        android:id="@+id/txt_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/josefinsans_regular"
        android:text="@string/chat_unavailable"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_below="@+id/txt_d"
        android:id="@+id/txt_dia"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/josefinsans_regular"
        android:text="@string/chat_info_title"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold" />


<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/enter_amount"-->
<!--        android:id="@+id/amount"-->
<!--        android:textColorHint="#FF000000"-->
<!--        android:fontFamily="@font/josefinsans_regular"-->
<!--        android:background="@android:color/transparent"-->
<!--        android:textSize="@dimen/text_size"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:inputType="number"-->
<!--        android:padding="10sp"-->
<!--        android:singleLine="true"-->
<!--        tools:targetApi="lollipop" />-->

    <RelativeLayout
        android:layout_below="@+id/txt_dia"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="@string/charge"
            android:textAllCaps="false"
            android:gravity="center"
            android:id="@+id/btn_submit"
            android:textSize="15sp"
            android:background="@color/red"
            android:fontFamily="@font/josefinsans_semibold"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="@string/cancel"
            android:visibility="gone"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:id="@+id/btn_cancel"
            android:layout_toLeftOf="@+id/btn_submit"
            android:textSize="15sp"
            android:background="@color/grey"
            android:fontFamily="@font/josefinsans_semibold"
            android:textColor="@color/white"/>


    </RelativeLayout>

</RelativeLayout>