<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred_bg"
    android:clickable="true"
    tools:context=".fragment.BuyCredit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:id="@+id/l1"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="10sp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:id="@+id/back"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_credit"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:fontFamily="@font/josefinsans_semibold"
            android:textSize="20sp"
            android:id="@+id/login_text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_marginTop="15sp"
        android:id="@+id/l2"
        android:gravity="center_horizontal"
        android:background="@drawable/buy_credit_bg">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/premium_heading"
            android:textColor="@color/drawertextcolor"
            android:fontFamily="@font/josefinsans_regular"
            android:textSize="28sp"
            android:id="@+id/t1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading2"
            android:gravity="center_horizontal"
            android:textColor="@color/textcolor"
            android:layout_marginTop="14sp"
            android:fontFamily="@font/josefinsans_regular"
            android:textSize="15sp"
            android:id="@+id/t2"
            />


        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycle_buy_credit"
        android:layout_below="@+id/l2"
        android:layout_margin="10sp"/>


</RelativeLayout>